# critter

./: .gitignore  eslint.config.mjs  index.html  package-lock.json  package.json
core/: Cargo.toml
core/src/: lib.rs  skills.rs
public/: style.css
src/: main.ts
